# fitness-app

./: README.md  pubspec.yaml
android/app/: build.gradle
app/: .gitignore  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/config/: colors.dart  images.dart  index.dart  routing.dart
assets/: profile.json  program_data.json
coverage/: lcov.info
fake-api/: .env  Cargo.toml  Rocket.toml
fake-api/src/: main.rs
fake-api/src/comments/: entities.rs  routes.rs
fake-api/src/drivers/: security.rs
fake-api/src/health/: routes.rs
fake-api/src/programs/: entities.rs  routes.rs
fake-api/src/user/: entities.rs  mod.rs  routes.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: card_body.dart  constants.dart  main.dart
lib/config/: colors.dart  fonts.dart  images.dart  routing.dart  strings.dart
lib/controller/: login_manager.dart  program_manager.dart
lib/features/chronometer/: index.dart
lib/features/daily/: card_body.dart  day_screen.dart
lib/model/: amrap.dart  bloc.dart  daily_program.dart  emom.dart  error_type.dart  exercice.dart  exercice_type.dart  exercise.dart  exercise_set.dart  for_time.dart  serie.dart  set.dart  tabata.dart
lib/shared/helpers/: network.dart
lib/shared/widgets/: big_logo.dart  (+2 more)
lib/utils/: api.dart
test/model/: amrap_test.dart  daily_program_test.dart  emom_test.dart  exercise_set_test.dart  exercise_test.dart  for_time_test.dart  tabata_test.dart
test/utils/: duration_to_string_test.dart
(+255 files in other folders)
