[package]
name = "api-fitness-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
dotenv = "0.15.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
jsonwebtoken = "8.0.1"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "serve"]